<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:src="@drawable/temp"/>

    <TextView
        android:id="@+id/usernameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/usernameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_edittext01"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/username"
        android:textColorHint="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"/>

    <TextView
        android:id="@+id/emailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/email_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_edittext01"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"/>

    <TextView
        android:id="@+id/passwordTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/password_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/passwordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_edittext01"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue_2"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/register"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="Bạn đã có tài khoản?" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/blue_1"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/login"/>

</LinearLayout>